# livedemo

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/smartvision/livedemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: LiveAudioMediaSubsession.cpp  LiveAudioMediaSubsession.h  LiveAudioSource.cpp  LiveAudioSource.h  LiveVideoMediaSubsession.cpp  LiveVideoMediaSubsession.h  LiveVideoSource.cpp  LiveVideoSource.h  MediaBuffer.cpp  MediaBuffer.h  MediaServer.cpp  RtmpClient.cpp  RtmpClient.h  TriggerStream.cpp  TriggerStream.h  native-lib.cpp
app/src/main/cpp/librtmp/: amf.h  rtmp.h
app/src/main/java/com/smartvision/livedemo/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/smartvision/livedemo/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
